--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "http-errors": "^1.7.3",
     "lowdb": "^1.0.0",
+    "mongoose": "^5.9.10",
     "shortid": "^2.2.15"
   },
   "devDependencies": {
