--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "concurrently": "^5.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
     "faker": "^4.1.0",
     "http-errors": "^1.7.3",
+    "jsonwebtoken": "^8.5.1",
     "lowdb": "^1.0.0",
     "mongoose": "^5.9.10",
+    "mongoose-unique-validator": "^2.0.3",
+    "morgan": "^1.10.0",
     "shortid": "^2.2.15"
   },
   "devDependencies": {
