--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "concurrently 'cd client && npm start' 'nodemon app.js'"
+    "start": "node app.js",
+    "dev": "concurrently 'cd client && npm start' 'nodemon app.js'",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node build --output public"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +15,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "concurrently": "^5.2.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "faker": "^4.1.0",
