--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^5.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "express-validator": "^6.4.0",
     "faker": "^4.1.0",
     "http-errors": "^1.7.3",
