--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "concurrently 'cd client && npm start' 'nodemon app.js'",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node build --output client"
+    "build": "node build --output client",
+    "heroku-postbuild": "npm install && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -29,7 +30,7 @@
     "morgan": "^1.10.0",
     "shortid": "^2.2.15"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.3"
+  "engines": {
+    "node": "v12.16.3"
   }
 }
