Add checkout component and adding style

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node build --output client"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +28,9 @@
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "shortid": "^2.2.15"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.3"
   },
   "engines": {
     "node": "v12.16.3"
