--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.1.12",
     "particles-bg": "^2.5.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.12.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
